--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4"
+  },
+  "peerDependencies": {
+    "react-dom": "*"
   }
 }
