--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proper-react-modal",
+  "name": "@prezly/react-promise-modal",
   "version": "1.0.0",
-  "description": "The proper (and easy) way of doing modals in React",
+  "description": "The proper (and easy) way of doing modals in React. With Promises.",
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src/index.js > dist/index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/prezly/proper-react-modal.git"
+    "url": "git+https://github.com/prezly/react-promise-modal.git"
   },
   "keywords": [
     "react",
@@ -22,9 +22,9 @@
   "author": "Ivan Voskboinyk <ivan@prezly.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/prezly/proper-react-modal/issues"
+    "url": "https://github.com/prezly/react-promise-modal/issues"
   },
-  "homepage": "https://github.com/prezly/proper-react-modal#readme",
+  "homepage": "https://github.com/prezly/react-promise-modal#readme",
   "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.2.3",
