--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
     "presets": [
-        "@babel/preset-env"
+        ["@babel/preset-env", { "modules": "commonjs" }],
+        "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "babel-plugin-transform-es2015-modules-simple-commonjs"
     ]
 }
