--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   },
   "homepage": "https://github.com/prezly/react-promise-modal#readme",
   "dependencies": {
-    "@types/react": "*",
-    "@types/react-dom": "*"
+    "@types/react": ">=16",
+    "@types/react-dom": ">=16"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
     "np": "^7.7.0",
@@ -54,7 +54,7 @@
     "typescript": "4.4"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "react": ">=16",
+    "react-dom": ">=16"
   }
 }
