--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   },
   "homepage": "https://github.com/prezly/react-promise-modal#readme",
   "dependencies": {
-    "@types/react": ">=16",
-    "@types/react-dom": ">=16"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
@@ -48,10 +48,10 @@
     "@babel/preset-typescript": "^7.21.5",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
     "np": "^7.7.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rimraf": "^5.0.1",
-    "typescript": "4.4"
+    "typescript": "4.5"
   },
   "peerDependencies": {
     "react": ">=16",
