--- a/package.json
+++ b/package.json
@@ -42,19 +42,19 @@
     "@types/react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.21.8",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-typescript": "^7.21.5",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
-    "np": "^7.7.0",
+    "np": "^10.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "rimraf": "^5.0.1",
-    "typescript": "4.5"
+    "rimraf": "^6.0.1",
+    "typescript": "^5.7.2"
   },
   "peerDependencies": {
-    "react": ">=16",
-    "react-dom": ">=16"
+    "react": ">=18",
+    "react-dom": ">=18"
   }
 }
