--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version:  [20]
-        react-version: [18]
+        node-version:  [20, 22]
+        react-version: [18, 19]
 
     steps:
       - uses: actions/checkout@master
