--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
     "np": "^10.1.0",
+    "prettier": "^3.4.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^6.0.1",
