--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [
         ["@babel/preset-env", { "modules": "commonjs" }],
+        "@babel/preset-react",
         "@babel/preset-typescript"
     ],
     "plugins": [
